[project]
name = "voting"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aioredis (>=2.0.1,<3.0.0)",
    "pymysql (>=1.1.1,<2.0.0)",
    "quart (>=0.20.0,<0.21.0)",
    "hypercorn (>=0.17.3,<0.18.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
